fix: remove "Authorization" header as obligatory in GET /import endpoint description
